Add business owner login and logout pages

--- a/add-slot.html
+++ b/add-slot.html
@@ -20,7 +20,10 @@
         <a href="send-reminders.html">Reminders</a>
         <a href="add-customer.html">Add Customer</a>
       </nav>
-      <a class="btn ghost" href="dashboard.html">Back to Dashboard</a>
+      <div class="nav-actions">
+        <a class="btn ghost" href="dashboard.html">Back to Dashboard</a>
+        <a class="btn primary" href="logout.html">Log Out</a>
+      </div>
     </header>
 
     <main class="utility-page availability-page">
