--- a/dashboard.html
+++ b/dashboard.html
@@ -19,7 +19,10 @@
         <a href="#dashboard-overview">Overview</a>
         <a href="#relationship-hub">Customers &amp; Schedule</a>
       </nav>
-      <a class="btn ghost" href="index.html">Back to Marketing</a>
+      <div class="nav-actions">
+        <a class="btn ghost" href="index.html">Marketing Site</a>
+        <a class="btn primary" href="logout.html">Log Out</a>
+      </div>
     </header>
 
     <main class="profile-dashboard">
