--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
       <a href="#appointments">Appointments</a>
       <a href="#notifications">Notifications</a>
     </nav>
-    <a class="btn primary" href="#cta">Get Started</a>
+    <div class="nav-actions">
+      <a class="btn ghost" href="login.html">Log In</a>
+      <a class="btn primary" href="#cta">Get Started</a>
+    </div>
   </header>
 
   <main>
