Add customer registration CTA and payment columns

--- a/dashboard.html
+++ b/dashboard.html
@@ -104,6 +104,9 @@
             <h2>Customers, Schedule &amp; Updates</h2>
             <p>Manage your customer directory, appointment pipeline, and recent activity without leaving this view.</p>
           </div>
+          <div class="section-actions">
+            <a class="btn primary" href="add-customer.html">Register New Customer</a>
+          </div>
         </div>
         <div class="tabbed-hub">
           <div class="tab-buttons" role="tablist" aria-label="Customer relationship hub">
@@ -153,6 +156,7 @@
                       <th>Last Visit</th>
                       <th>Next Appointment</th>
                       <th>Services Taken</th>
+                      <th>Total Payment</th>
                       <th>Notes</th>
                     </tr>
                   </thead>
@@ -172,6 +176,7 @@
                       <td>Apr 15, 2024</td>
                       <td>May 2, 2024 &middot; 09:00 AM</td>
                       <td>18</td>
+                      <td>$2,160</td>
                       <td>Interested in product launch preview.</td>
                     </tr>
                     <tr>
@@ -189,6 +194,7 @@
                       <td>Apr 11, 2024</td>
                       <td>Apr 28, 2024 &middot; 02:30 PM</td>
                       <td>9</td>
+                      <td>$1,080</td>
                       <td>Requested follow-up consultation.</td>
                     </tr>
                     <tr>
@@ -206,6 +212,7 @@
                       <td>Apr 17, 2024</td>
                       <td>May 6, 2024 &middot; 11:15 AM</td>
                       <td>22</td>
+                      <td>$2,860</td>
                       <td>Send VIP promo prior to visit.</td>
                     </tr>
                     <tr>
@@ -223,6 +230,7 @@
                       <td>Apr 9, 2024</td>
                       <td>May 1, 2024 &middot; 04:00 PM</td>
                       <td>5</td>
+                      <td>$540</td>
                       <td>Offer seasonal discount bundle.</td>
                     </tr>
                   </tbody>
@@ -241,6 +249,7 @@
                       <th>Status</th>
                       <th>Assigned Staff</th>
                       <th>Services Taken</th>
+                      <th>Payment</th>
                       <th>Actions</th>
                     </tr>
                   </thead>
@@ -253,6 +262,7 @@
                       <td><span class="tag success">Confirmed</span></td>
                       <td>Jordan Lee</td>
                       <td>18</td>
+                      <td>$240</td>
                       <td>
                         <button class="btn ghost btn-small">Reschedule</button>
                       </td>
@@ -265,6 +275,7 @@
                       <td><span class="tag neutral">Pending</span></td>
                       <td>Jordan Lee</td>
                       <td>9</td>
+                      <td>$150</td>
                       <td>
                         <button class="btn ghost btn-small">Confirm</button>
                       </td>
@@ -277,6 +288,7 @@
                       <td><span class="tag warning">Awaiting Prep</span></td>
                       <td>Stella Park</td>
                       <td>22</td>
+                      <td>$320</td>
                       <td>
                         <button class="btn ghost btn-small">Notify</button>
                       </td>
@@ -289,6 +301,7 @@
                       <td><span class="tag success">Confirmed</span></td>
                       <td>Jordan Lee</td>
                       <td>5</td>
+                      <td>$180</td>
                       <td>
                         <button class="btn ghost btn-small">Reschedule</button>
                       </td>
@@ -305,6 +318,7 @@
                       <th>Time</th>
                       <th>Update</th>
                       <th>Services Taken</th>
+                      <th>Payment</th>
                     </tr>
                   </thead>
                   <tbody>
@@ -315,6 +329,7 @@
                         <p>Automatic SMS reminder delivered to Anna Smith for her 09:00 AM appointment.</p>
                       </td>
                       <td>18</td>
+                      <td>$240</td>
                     </tr>
                     <tr>
                       <td>08:10 AM</td>
@@ -323,6 +338,7 @@
                         <p>James Carter moved his merchandising review to Apr 25 at 11:30 AM.</p>
                       </td>
                       <td>9</td>
+                      <td>$150</td>
                     </tr>
                     <tr>
                       <td>Yesterday</td>
@@ -331,6 +347,7 @@
                         <p>Lucia Ortega rated her experience 5 stars and left a positive comment.</p>
                       </td>
                       <td>22</td>
+                      <td>$320</td>
                     </tr>
                     <tr>
                       <td>Yesterday</td>
@@ -339,6 +356,7 @@
                         <p>New availability opened for Apr 29 by Jordan Lee.</p>
                       </td>
                       <td>5</td>
+                      <td>$180</td>
                     </tr>
                   </tbody>
                 </table>
