Link nav logo to home

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <header class="top-nav">
-    <div class="logo">devter CRM</div>
+    <a class="logo" href="index.html">devter CRM</a>
     <nav class="nav-links">
       <a href="#overview">Overview</a>
       <a href="#business-portal">Business Portal</a>
