--- a/dashboard.html
+++ b/dashboard.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <header class="top-nav">
-      <div class="logo">devter CRM</div>
+      <a class="logo" href="index.html">devter CRM</a>
       <nav class="nav-links">
         <a href="#dashboard-overview">Overview</a>
         <a href="#relationship-hub">Customers &amp; Schedule</a>
