--- a/logout.html
+++ b/logout.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <header class="top-nav">
-      <div class="logo">devter CRM</div>
+      <a class="logo" href="index.html">devter CRM</a>
       <nav class="nav-links">
         <a href="index.html#overview">Overview</a>
         <a href="index.html#business-portal">Business Portal</a>
