--- a/index.html
+++ b/index.html
@@ -15,9 +15,6 @@
     <nav class="nav-links">
       <a href="#overview">Overview</a>
       <a href="#business-portal">Business Portal</a>
-      <a href="#customer-portal">Customer Portal</a>
-      <a href="#appointments">Appointments</a>
-      <a href="#notifications">Notifications</a>
     </nav>
     <div class="nav-actions">
       <a class="btn ghost" href="login.html">Log In</a>
@@ -155,202 +152,6 @@
       </div>
     </section>
 
-    <section class="split-section" id="customer-portal">
-      <div class="section-header">
-        <span class="pill">Customer Portal</span>
-        <h2>Delight customers with a frictionless booking experience</h2>
-        <p>
-          Help customers discover your business, schedule appointments, and stay informed with automated reminders.
-        </p>
-      </div>
-      <div class="split">
-        <div class="panel">
-          <h3>Discover & Book</h3>
-          <div class="search">
-            <input type="search" placeholder="Search businesses or sectors" />
-            <button class="btn primary" type="button">Search</button>
-          </div>
-          <div class="business-list">
-            <article>
-              <h4>Glow Beauty Studio</h4>
-              <p>Beauty & Wellness &bull; +1 646 555 0145</p>
-              <button class="btn ghost" type="button">View Profile</button>
-            </article>
-            <article>
-              <h4>NextGen Tutors</h4>
-              <p>Education &bull; +1 917 555 0182</p>
-              <button class="btn ghost" type="button">View Profile</button>
-            </article>
-          </div>
-        </div>
-        <div class="panel">
-          <h3>Book an Appointment</h3>
-          <form class="booking-form">
-            <label>
-              Select Business
-              <select>
-                <option>Glow Beauty Studio</option>
-                <option>NextGen Tutors</option>
-                <option>Horizon Healthcare</option>
-              </select>
-            </label>
-            <div class="date-time">
-              <label>
-                Date
-                <input type="date" />
-              </label>
-              <label>
-                Time
-                <input type="time" />
-              </label>
-            </div>
-            <label>
-              Full Name
-              <input type="text" placeholder="Customer name" />
-            </label>
-            <label>
-              Contact Number
-              <input type="tel" placeholder="Phone number" />
-            </label>
-            <label>
-              Email
-              <input type="email" placeholder="Email address" />
-            </label>
-            <button class="btn primary" type="button">Confirm Appointment</button>
-          </form>
-        </div>
-      </div>
-    </section>
-
-    <section class="grid-section" id="appointments">
-      <div class="section-header">
-        <span class="pill">Appointment Management</span>
-        <h2>Stay on top of every booking</h2>
-        <p>
-          Customize availability, approve requests, and keep your calendar in sync. Customers enjoy instant
-          confirmations and easy access to manage their bookings.
-        </p>
-      </div>
-      <div class="cards-grid three">
-        <article class="feature-card">
-          <h3>Scheduling Control</h3>
-          <p>Define recurring availability and ad-hoc slots with intuitive calendar tools.</p>
-          <ul class="list-check">
-            <li>Add, edit, or delete time slots</li>
-            <li>Block out holidays and breaks</li>
-            <li>Sync with Google or Outlook calendars</li>
-          </ul>
-        </article>
-        <article class="feature-card">
-          <h3>Upcoming Appointments</h3>
-          <div class="appointment-list">
-            <div class="appointment">
-              <span>
-                <strong>Glow Beauty Studio</strong>
-                <small>Today &bull; 10:30 AM</small>
-              </span>
-              <button class="btn ghost" type="button">Reschedule</button>
-            </div>
-            <div class="appointment">
-              <span>
-                <strong>NextGen Tutors</strong>
-                <small>Tomorrow &bull; 04:00 PM</small>
-              </span>
-              <button class="btn ghost" type="button">Notify</button>
-            </div>
-          </div>
-        </article>
-        <article class="feature-card">
-          <h3>Customer Experience</h3>
-          <p>Send confirmations instantly and let customers modify appointments with one click.</p>
-          <ul class="list-check">
-            <li>Customers can cancel or reschedule</li>
-            <li>Automated confirmation receipts</li>
-            <li>Flexible reminder schedule</li>
-          </ul>
-        </article>
-      </div>
-    </section>
-
-    <section class="grid-section" id="notifications">
-      <div class="section-header">
-        <span class="pill">Communication & Notifications</span>
-        <h2>Keep everyone informed</h2>
-        <p>
-          Leverage SMS or email to keep customers and staff aligned. Send reminders, updates, and personalised
-          messages without leaving the dashboard.
-        </p>
-      </div>
-      <div class="cards-grid">
-        <article class="feature-card">
-          <h3>Automated Messages</h3>
-          <p>Choose between SMS or email notifications and tailor message templates for each service.</p>
-          <div class="notification-preview">
-            <span class="label">Preview</span>
-            <p>Hi Anna, this is a reminder of your appointment with Glow Beauty Studio on Oct 21 at 3:00 PM.</p>
-          </div>
-        </article>
-        <article class="feature-card">
-          <h3>Admin Control</h3>
-          <ul class="list-check">
-            <li>Manage business and customer accounts</li>
-            <li>Approve sectors and tags</li>
-            <li>Moderate feedback submissions</li>
-          </ul>
-          <p class="note">*Admin panel is optional and can be enabled as your operation grows.</p>
-        </article>
-      </div>
-    </section>
-
-    <section class="grid-section" id="security">
-      <div class="section-header">
-        <span class="pill">Security & Privacy</span>
-        <h2>Enterprise-grade protection for growing businesses</h2>
-        <p>
-          Protect your customers' personal data with built-in safeguards and compliance-first architecture.
-        </p>
-      </div>
-      <div class="cards-grid three">
-        <article class="feature-card compact">
-          <h3>SSL Encryption</h3>
-          <p>Every interaction is encrypted end-to-end for peace of mind.</p>
-        </article>
-        <article class="feature-card compact">
-          <h3>Phone Verification</h3>
-          <p>Verify business owners via SMS to ensure trusted profiles.</p>
-        </article>
-        <article class="feature-card compact">
-          <h3>Compliance Ready</h3>
-          <p>GDPR-friendly data management keeps personal information protected.</p>
-        </article>
-      </div>
-    </section>
-
-    <section class="grid-section" id="roadmap">
-      <div class="section-header">
-        <span class="pill">Future Enhancements</span>
-        <h2>Scale with advanced capabilities</h2>
-        <p>
-          Unlock more experiences as your customer base grows. Expand your toolkit with payments, multi-language
-          support, and staff collaboration features.
-        </p>
-      </div>
-      <div class="cards-grid three">
-        <article class="feature-card compact">
-          <h3>Integrated Payments</h3>
-          <p>Accept deposits and full payments during booking.</p>
-        </article>
-        <article class="feature-card compact">
-          <h3>Multi-language</h3>
-          <p>Offer localized customer journeys for global audiences.</p>
-        </article>
-        <article class="feature-card compact">
-          <h3>Staff Management</h3>
-          <p>Assign appointments to team members with independent calendars.</p>
-        </article>
-      </div>
-    </section>
-
     <section class="cta" id="cta">
       <div class="cta-content">
         <h2>Ready to streamline your customer journey?</h2>
@@ -372,13 +173,9 @@
       <nav>
         <a href="#overview">Overview</a>
         <a href="#business-portal">Business Portal</a>
-        <a href="#customer-portal">Customer Portal</a>
-        <a href="#appointments">Appointments</a>
-        <a href="#security">Security</a>
+        <a href="#cta">Get Started</a>
       </nav>
       <div class="footer-meta">
-        <a href="#roadmap">Product Roadmap</a>
-        <a href="#notifications">Notifications</a>
         <a href="#cta">Contact</a>
       </div>
     </div>
